--- a/Classes/09-dom.html
+++ b/Classes/09-dom.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .hidden {
+            display: none;
+        }
+    </style>
 </head>
+
 <body>
-    <div>
-        <p>
-
+    <div id="ID">
+        <p class="myClass hidden">
+            Hola Mundo
         </p>
-        <ol>
-
-        </ol>
+        <p class="myClass hidden">
+            Soy Alex
+        </p>
+        <ul class="navLinks" id="navLinks">
+            <li>primera</li>
+            <li>segunda</li>
+        </ul>
     </div>
     <h1></h1>
     <img src="" alt="">
+
+    <button onclick="show()">Mostrar</button>
+    <button onclick="hide()">Esconder</button>
 
     <script>
         console.log(document.body);
@@ -24,10 +38,34 @@
         console.log(document.getRootNode());
 
         console.log(document.getElementById("ID"));
-        console.log(document.getElementsByClassName("Class-name"));
-        console.log(document.getElementsByTagName("html-tag"));
-        
-        document.querySelector();
+        console.log(document.getElementsByClassName("myClass"));
+        console.log(document.getElementsByTagName("h1"));
+        console.log(document.querySelector("#ID"));
+        console.log(document.querySelector(".myClass"));
+        console.log(document.querySelectorAll(".myClass"));
+
+        console.log(document.getElementById("navLinks"));
+        console.log(document.getElementsByTagName("li"));
+        console.log(document.getElementsByTagName("li"));
+
+        let liList = document.getElementsByTagName("li");
+        console.log(liList[0].textContent);
+        console.log(liList[1].textContent);
+
+        //crear elementos HTML
+        let newLi = document.createElement("li");
+        newLi.innerText = "tercero";
+        navLinks.appendChild(newLi);  //Agrega un hijo
+
+        const show = () => {
+            document.querySelectorAll(".myClass").forEach(element =>(element.classList.remove("hidden")));
+        }
+
+        const hide = () => {
+            document.querySelectorAll(".myClass").forEach(element =>(element.classList.add("hidden")));
+        }
+
     </script>
 </body>
+
 </html>
