--- a/Classes/index.html
+++ b/Classes/index.html
@@ -9,6 +9,6 @@
 <button scr="">Click</button>
 <div id="output"></div>
 <body>
-    <script src="08-objetos.js"></script>
+    <script src="11-destructuring.js"></script>
 </body>
 </html>
